LU-7836 ptlrpc: No new signal complete request

If replay complete signal request timeout, let's
keep the old request, instead of using the new
request, otherwise if recovery is stuck, the remote
recovery target might be queued too much such
requests and cause OOM.

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I29c8d906e034a9e7ee980efc4d5233a914e5ca6a